--- a/css/main.css
+++ b/css/main.css
@@ -8,12 +8,24 @@
 header {
   color: #fff;
   font-size: 18px;
-  height: 56px;
-  line-height: 56px;
+  /*height: 56px;*/
+  line-height: 49px;
   padding-left: 16px;
+  padding-bottom: 5px;
   background-color: #F44336;
 }
 
 header .fa-chevron-left {
   margin-right: 16px;
+}
+
+header span:first-child{
+  display: block;
+}
+header input{
+  padding: 10px;
+  width: 60%;
+}
+.fa-search{
+  position: absolute;
 }
