--- a/css/main.css
+++ b/css/main.css
@@ -7,31 +7,126 @@
 
 header {
   color: #fff;
-  font-size: 18px;
-  /*height: 56px;*/
-  line-height: 49px;
-  padding-left: 16px;
-  padding-bottom: 5px;
+  font-size: 1.4rem;
+  padding: 15px;
   background-color: #F44336;
+  border: 1px solid #F44336;
 }
 
-header .fa-chevron-left {
-  margin-right: 16px;
+header i{
+  margin-right: 15px;
 }
-
-header span:first-child{
-  display: block;
+.search {
+  background-color: #F44336;
+  border: 1px solid #F44336;
+  padding: 6px;
+  position: relative;
 }
-header input{
-  padding: 10px;
-  width: 60%;
-}
-.fa-search{
+.search i{
   position: absolute;
+  left: 2%;
+  top: 30%;
+  color: #B8BDBB;
+  font-size: 1.6rem;
+
+}
+input[type ="text"]{
+  padding: 15px;
+  width: 100%;
+  padding-left: 7%;
+  font-size: 1.2rem;
+
+}
+input::placeholder{
+  /*color: rgba(184,189,187,0.6);*/
+
+}
+.station{
+  position: relative;
+  line-height: 1.3;
+  padding: 15px ;
+  border-bottom: 1px solid rgba(184,189,187,0.6);
+}
+.station:nth-child(odd){
+  background-color: #FAF6F6;
+}
+.station:nth-child(even){
+  background-color: #EEEEEE;
+}
+.maplink{
+  color: #FF5071;
+  position: absolute;
+  right: 1rem;
+  top: 2.5rem;
 }
 
 /*MAP*/
 #map {
   height: 400px;
-  width: 100%;
- }
+}
+
+.stationDetails{
+ margin: 20px; 
+ line-height: 1.8;
+ position: relative;
+}
+hr{
+  border: 0.2px solid rgba(184,189,187,0.8);
+}
+.space{
+  position: absolute;
+  top: 1.5%;
+  right: 0;
+  text-align:right;
+}
+.space span:first-child{
+  display: block;
+  color: red;
+  font-weight: 500;
+}
+
+.cont-prod{
+  margin:20px 0;
+  text-align: center;
+}
+.cont-prod span{
+  background-color: #B8BDBB;
+  padding: 7px;
+  color: #fff;
+  border-radius: 0.3rem;
+  margin-right: 7px;
+}
+/*RUTA*/
+#ruta{
+  padding: 0.5rem;
+  background-color: #F44336;
+  border:none;
+  color: #fff;
+  border-radius: 1px;
+}
+#instructions{
+  padding: 10px;
+  margin-top: 20px;
+  line-height: 2.5;
+}
+
+#instructions li{
+  list-style: none;
+  padding: 2px 10px;
+}
+#instructions li:nth-child(odd){
+  background-color: #FAF6F6;
+  
+}
+#instructions li:nth-child(even){
+  background-color: #EEEEEE;
+}
+#instructions li:last-child div{
+  font-size: 1rem !important;
+
+}
+@media screen min-width:  {
+   
+ } {
+  
+}
